--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.11'  # Adjust the Python version as needed
+          python-version: '3.8'  # Adjust the Python version as needed
 
       - name: Install dependencies
         run: |
@@ -43,3 +43,5 @@ jobs:
 
       - name: Push changes
         uses: ad-m/github-push-action@v0.6.0
+        with:
+          branch: master
