--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          apt-get install git-all
 
       - name: Run DBT
         run: |
