--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          sudo apt-get install git-all
+          sudo apt-get install git
 
       - name: Run DBT
         run: |
