--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -44,5 +44,5 @@ jobs:
         run: |
           git add .
           git commit -m "Update master branch"
-          git push origin master
+          git push origin main
 
