--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -20,6 +20,14 @@ jobs:
         with:
           python-version: '3.12'  # Adjust the Python version as needed
 
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -41,8 +49,12 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Commit and push changes
+        env:
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
         run: |
-          git add .
-          git commit -m "Update master branch"
-          git push origin main
+          git add files/*
+          git commit -m "Update files from DBT run"
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git main
+        if: |
+          git diff --quiet || echo "Changes detected"
 
