--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -50,9 +50,9 @@ jobs:
 
       - name: Commit and push changes
         env:
-          PAT: ${{ secrets.PAT }}
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
         run: |
           git add .
           git commit -m "Update files from DBT run"
-          git push https://x-access-token:${{ secrets.PAT }}@github.com/${{ github.repository }}.git main
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git main
 
