--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -1,10 +1,10 @@
 name: Run DBT Project
 
 on:
-  schedule:
-    - cron: '0 6 * * *'  # 6 AM UTC
-    - cron: '0 14 * * *' # 2 PM UTC
-    - cron: '0 22 * * *' # 10 PM UTC
+  # schedule:
+  #   - cron: '0 6 * * *'  # 6 AM UTC
+  #   - cron: '0 14 * * *' # 2 PM UTC
+  #   - cron: '0 22 * * *' # 10 PM UTC
   workflow_dispatch: # Allows for manual triggering of the workflow
 
 jobs:
