--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -48,5 +48,5 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
           git commit -m "Update files from DBT run"
-          git push
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git main
 
