--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -1,10 +1,6 @@
 name: Run DBT Project
 
 on:
-  # schedule:
-  #   - cron: '0 6 * * *'  # 6 AM UTC
-  #   - cron: '0 14 * * *' # 2 PM UTC
-  #   - cron: '0 22 * * *' # 10 PM UTC
   workflow_dispatch: # Allows for manual triggering of the workflow
 
 jobs:
@@ -12,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -42,11 +40,13 @@ jobs:
           dbt run
 
       - name: Commit and push changes
-        run: | 
-          git status
+        run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
-          git commit -m "Update files from DBT run"
-          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git main
-
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "Update files from DBT run"
+            git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git main
+          else
+            echo "No changes to commit"
+          fi
