Update ignore. Add dbt clean

--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -42,6 +42,7 @@ jobs:
           cd petro_dbt
           dbt deps
           dbt run
+          dbt clean
 
       - name: Commit and push changes
         run: |
