--- a/.github/workflows/dbt.yaml
+++ b/.github/workflows/dbt.yaml
@@ -48,6 +48,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global init.defaultBranch main
           git add .
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m "Update files from DBT run"
